Tca 21.04.26 (#62)
* add distgroupadd script
* update spark ver; update spark env tmp and log dirs from env
* hive-env updates
* debug option to tdh-init
* add param for ignoring hiveserver2 and running metastore only